Prueba pull-push

--- a/Practica1_AD.qmd
+++ b/Practica1_AD.qmd
@@ -11,12 +11,11 @@ Participantes: Álvaro Velasco Sobrino, Carlos Bayés Liébana, Miquel Rivas Van
 #| echo: false
 ```
 
-En este documento se presenta un análisis exploratorio de los datos Alumnos matriculados. Sexo, dedicación y procedencia. Curso 2024-2025. Universidad de Zaragoza. Obtenidos de la página: 
+En este documento se presenta un análisis exploratorio de los datos Alumnos matriculados. Sexo, dedicación y procedencia. Curso 2024-2025. Universidad de Zaragoza. Obtenidos de la página:
 
 (https://datos.gob.es/es/catalogo/u02100001-alumnos-matriculados-sexo-dedicacion-y-procedencia-curso-2024-2025-universidad-de-zaragoza)
 
 
---
-En este trabajo
---
-Se presenta un análisis exploratorio de los datos 
+## En este trabajo ##
+
+Se presenta un análisis exploratorio de los datos
