--- a/Practica1_AD.qmd
+++ b/Practica1_AD.qmd
@@ -15,7 +15,9 @@ En este documento se presenta un análisis exploratorio de los datos Alumnos mat
 
 (https://datos.gob.es/es/catalogo/u02100001-alumnos-matriculados-sexo-dedicacion-y-procedencia-curso-2024-2025-universidad-de-zaragoza)
 
+## En este trabajo
 
-## En este trabajo ##
-
-Se presenta un análisis exploratorio de los datos
+Se presenta un análisis exploratorio de los datos que contendrá:
+1-Presentación de los datos
+2-Aálisis de las medidas en su tendencia central
+3-Am
