--- a/Practica1_AD.qmd
+++ b/Practica1_AD.qmd
@@ -19,5 +19,11 @@ En este documento se presenta un análisis exploratorio de los datos Alumnos mat
 
 Se presenta un análisis exploratorio de los datos que contendrá:
 1-Presentación de los datos
-2-Aálisis de las medidas en su tendencia central
-3-Am
+2-Análisis de las medidas en su tendencia central
+3-Análisis de la variabilidad
+4-Gráficos
+5-Conclusiones
+
+
+
+
